--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -161,7 +161,7 @@ height: 100%;
 .wrapper {
   height: 100vh;
   width: 100%;
-  background: url("file:///Users/haanibokhari/Downloads/Attachment-1.jpeg");
+  background: url("file:///Users/haanibokhari/Desktop/github2/resources/gitHub%20images/Attachment-1.jpeg");
   background-position-x: 50%;
   background-position-y: 50%;
   background-size: cover;
