--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,9 +1,14 @@
+html {
+  overflow-x: hidden;
+}
+
 
 body {
 /*  border: 2px dotted teal;*/
 overflow-x: hidden;
 width: 100%;
 height: 100%;
+position: relative;
 }
 
 .reelButton {
@@ -161,7 +166,7 @@ height: 100%;
 .wrapper {
   height: 100vh;
   width: 100%;
-  background: url("file:///Users/haanibokhari/Desktop/github2/resources/gitHub%20images/Attachment-1.jpeg");
+  background: url("file:///Users/haanibokhari/Downloads/Attachment-1.jpeg");
   background-position-x: 50%;
   background-position-y: 50%;
   background-size: cover;
@@ -1787,6 +1792,7 @@ background-color: transparent;
 }
 
 /*MEDIA QUERIES*/
+
 
 @media (max-width: 567px) {
   #connect {
