--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -31,6 +31,7 @@ height: 100%;
   transition: 0.2s ease;
   font-size: 72px;
   opacity: 0;
+  -webkit-appearance: none;
 }
 
 .reels:hover .reel_four_hover {
@@ -115,6 +116,7 @@ height: 100%;
   position: absolute;
   left: 45%;
   bottom: 20px;
+  top: 80%;
   transform: translate(-50%, -50%);
 }
 
@@ -275,6 +277,19 @@ ul li {
   transition: all 0.3s ease;
   position: absolute;
 /*  bottom: 90%;*/
+  left: 220px;
+  background-color: skyblue;
+  border-radius: 100%;
+  opacity: 0.8;
+}
+
+.navbar_2_to_top {
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  position: absolute;
+  bottom: 300px;
   left: 220px;
   background-color: skyblue;
   border-radius: 100%;
@@ -1794,10 +1809,66 @@ background-color: transparent;
 
 /*MEDIA QUERIES*/
 
+@media (max-width: 363px) {
+
+  .psbLogo {
+    height: 130px !important;
+    left: -10px;
+  }
+
+  .text_2 {
+    font-size: 120px;
+    line-height: 0.8;
+  }
+
+  .workH {
+    font-size: 100px;
+  }
+
+  .things {
+    font-size: 80px;
+  }
+
+  .reels:hover {
+    border-radius: 50%;
+    height: 350px;
+  }
+
+  .aboutH {
+    font-size: 100px;
+  }
+
+  #audio-img {
+  right: 50px;
+  }
+
+  #audio-player {
+    position: relative;
+    right: 20px;
+  }
+  .cover {
+    overflow-x: hidden;
+  }
+
+  #js_2 {
+    top: 80%;
+  }
+
+  #connect {
+    font-size: 70px !important;
+  }
+
+  .thanks {
+    font-size: 90px;
+  }
+
+}
+
 
 @media (max-width: 567px) {
+
   #connect {
-    font-size: 90px;
+    font-size: 85px;
   }
 
 
