--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -219,7 +219,7 @@ height: 100%;
 .wrapper {
   height: 100vh;
   width: 100%;
-  background: url("../gitHubImages/Attachment-1-compressor.jpeg");
+/*  background: url("../gitHubImages/Attachment-1-compressor.jpeg");*/
   background-position-x: 50%;
   background-position-y: 50%;
   background-size: cover;
