--- a/Billy!/resources/css/styleBilly.css
+++ b/Billy!/resources/css/styleBilly.css
@@ -1,3 +1,9 @@
+
+html {
+  overflow-x: hidden !important;
+}
+
+
 body {
 /*  background-color: #000;
   background: url("http://piradosbrand.com/wp-content/uploads/2016/08/DSCF1614-160807p1200.jpg");
@@ -11,6 +17,7 @@ body {
   background-color: #fff;
   width: 100%;
   height: 100%;
+  position: relative;
 /*  margin: 0px;
   padding: 0px;*/
   overflow-x: hidden;
@@ -46,11 +53,11 @@ body {
 
 
 .slideshow {
-  background: url("file:///Users/haanibokhari/Desktop/ALL%20OF%20MY%20APPS/My%20Portfolio/Billy!/images/cover5.jpg");
+  background: url("../images/cover5.jpg");
 }
 
 .slideshow2 {
-  background: url("file:///Users/haanibokhari/Desktop/ALL%20OF%20MY%20APPS/My%20Portfolio/Billy!/images/belong2.jpg");
+  background: url("../images/belong2.jpg");
 }
 
 .bg-main {
@@ -143,9 +150,13 @@ body {
   transform: translate(-50%, -50%);
 }
 
+.overlay {
+  z-index: 2;
+}
+
 .wrapper {
   position: absolute;
-  top: 50%;
+  top: 0%;
   left: 100%;
   width: 550px;
   transform: translate(-50%, -50%);
@@ -153,16 +164,17 @@ body {
 
 .wrapper-2 {
   position: absolute;
-  top: 50%;
+  top: 2%;
   left: 100%;
   width: 550px;
   transform: translate(-50%, -50%);
 }
 
 .search {
-  position: fixed;
-  bottom: 312px;
-  left: 180px;
+  position: absolute;
+  z-index: 0;
+  top: -3px;
+  left: 200px;
   cursor: pointer;
 }
 
@@ -172,8 +184,9 @@ body {
   cursor: pointer;
   transition: all 0.3s ease;
   position: absolute;
-  bottom: 265px;
-  left: 200px;
+/*  bottom: 265px;*/
+  left: 220px;
+  top: -20px;
 }
 
 .navbar div {
@@ -204,7 +217,7 @@ body {
 
 
 .hamburger-1 {
-  transform: translateY(1px) rotate(40deg);
+  transform: translateY(0px) rotate(40deg);
   transition: all 0.1s;
 }
 
@@ -224,6 +237,7 @@ body {
     width: 100%;
     height: 100vh;
     position: fixed;
+    z-index: 2;
     top: 0;
     color: #000;
     transition: 0.5s;
@@ -238,6 +252,7 @@ body {
 
 .search-modal {
   position: fixed;
+  z-index: 2;
   width:100%;
   height: 100%;
   top: 0;
@@ -601,12 +616,34 @@ i:hover {
 
 }
 
+
+@media (max-width: 330px) {
+
+  .wrapper-3 {
+    min-width: 50px;
+  }
+
+  .place-holder {
+    padding-left: 45px;
+  }
+
+}
+
 @media (min-width: 768px) {
   .billyLogo {
     width: 256px;
     margin-left: 45px;
     margin-top: 30px;
 /*    height: 103px;*/
+  }
+
+  .wrapper-2 {
+    top: 3%;
+  }
+
+  .search {
+    top: 0;
+    left: 190px;
   }
 
 .mobile-nav {
