--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2315,7 +2315,17 @@ background-color: transparent;
 
 }
 
+
+@media (max-width: 992px) {
+
+.container-bars {
+  text-align: center;
+  }
+
+}
+
 @media (min-width: 992px) {
+
 
 .pS {
   position: relative;
