--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,6 +3,18 @@ html {
 }
 
 
+.pre_logo {
+  z-index: 3000;
+  position: fixed;
+/*  height: 100%;*/
+  width: 100%;
+  font-family: "helvetica";
+  text-transform: uppercase;
+  line-height: 0.8;
+  font-size: 12px;
+  letter-spacing: 10px;
+}
+
 #loader-wrapper {
   position: fixed;
   height: 100%;
@@ -118,6 +130,12 @@ html {
 }
 
 .loaded #loader {
+  opacity: 0;
+  -webkit-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+}
+
+.loaded .pre_logo {
   opacity: 0;
   -webkit-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
@@ -367,7 +385,7 @@ height: 100%;
 .wrapper {
   height: 100vh;
   width: 100%;
-  background: url("../gitHubImages/Attachment-2.jpg");
+  background: url("../gitHubImages/Attachment-6.jpg");
   background-position-x: 50%;
   background-position-y: 50%;
   background-size: cover;
