--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -539,7 +539,7 @@ height: 100%;
 #js_2 {
   position: absolute;
   left: 45%;
-/*  bottom: 20px;*/
+  bottom: 20px;
   top: 80%;
   transform: translate(-50%, -50%);
 }
