--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3159,6 +3159,30 @@ background-color: transparent;
     }
   }
 
+@media (max-device-aspect-ratio: 3/4) {
 
+  .wrapper,
+  #large-header {
+  height: calc(100vw * 1.333 - 9%);
+  }
+}
+@media (max-device-aspect-ratio: 2/3) {
+  .wrapper,
+  #large-header {
+  height: calc(100vw * 1.5 - 9%);
+  }
+}
+@media (max-device-aspect-ratio: 10/16) {
+  .wrapper,
+  #large-header {
+  height: calc(100vw * 1.6 - 9%);
+  }
+}
+@media (max-device-aspect-ratio: 9/16) {
+  .wrapper,
+  #large-header {
+  height: calc(100vw * 1.778 - 9%);
+  }
+}
 
 
