--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -26,6 +26,14 @@ html {
   animation: glitch 0.5s infinite linear;
 }*/
 
+.border {
+/*  border-radius: 0 !important;*/
+/*  transition: 0.2s ease;*/
+}
+
+.grey {
+  background-color: transparent !important;
+}
 
 .loader {
   display: block;
@@ -36,6 +44,8 @@ html {
   height: 70px;
   border: 3px solid transparent;
   border-top-color: #3498db;
+/*  filter:invert();*/
+/*  filter: sepia();*/
   z-index: 2000;
   border-radius: 50%;
   -webkit-animation: spin 0.4s linear infinite;
@@ -52,8 +62,8 @@ html {
   border: 3px solid transparent;
   border-top-color: #e73c3c;
   border-radius: 50%;
-  -webkit-animation: spin 0.5s linear infinite;
-  animation: spin 0.5s linear infinite;
+  -webkit-animation: spin 0.4s linear infinite;
+  animation: spin 0.4s linear infinite;
 }
 
 .loader:after {
@@ -66,8 +76,8 @@ html {
   border: 3px solid transparent;
   border-top-color: #f9c922;
   border-radius: 50%;
-  -webkit-animation: spin 0.8s linear infinite;
-  animation: spin 0.8s linear infinite;
+  -webkit-animation: spin 0.4s linear infinite;
+  animation: spin 0.4s linear infinite;
 }
 
 .pre_logo {
